--- a/web/static/css/report.css
+++ b/web/static/css/report.css
@@ -247,3 +247,34 @@ li {
     margin-top: 100px;
     margin-left: 5%;
 }
+.peviewer-head-label{
+    font-size: 20px;
+}
+.peviewer-section-table{
+    border-collapse : collapse;
+}
+.peviewer-section-thead {
+    display: table-header-group;
+}
+
+.peviewer-section-tbody {
+    display: table-row-group;
+}
+
+.peviewer-section-thead .peviewer-section-tr{
+    display: table-row;
+    border-bottom: 1px solid rgb(216, 216, 216);
+}
+.peviewer-section-tbody .peviewer-section-tr{
+    display: table-row;
+}
+.peviewer-section-th{
+    width:20%;
+    padding: 6px 10px;
+    display: table-cell;
+}
+
+.peviewer-section-td{
+    padding: 6px 10px;
+    display: table-cell;
+}
