정적리포트에 import function 목록 출력 기능 추가

--- a/web/analysisapp/templates/static_report.html
+++ b/web/analysisapp/templates/static_report.html
@@ -79,7 +79,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading">
-                    <span>Portable Executable Info</span>
+                    <span>PE 파일 정보</span>
                 </div>
                 <div class="panel-body">
                     {% if peviewer_section_forms != None %}
@@ -109,6 +109,15 @@
                         </div>
                     </div>
                     {% endif %}
+
+                    {% if peviewer_import_function_forms != None %}
+                    <label class="peviewer-head-label">Import Functions</label>
+                    {% for import_function_form in peviewer_import_function_forms %}
+                        <div class="peviewer-import-function-div"> &bull; {{ import_function_form.fields.name.initial }}</div>
+                    {% endfor %}
+                    {% endif %}
+
+
                 </div>
             </div>
         </div>
