통계화면에 키바나 대시보드 출력 추가

--- a/web/static/css/statistics.css
+++ b/web/static/css/statistics.css
@@ -21,6 +21,8 @@ body {
 
 .row-detail{
     padding: 0% 8% 2% 8%;
+    margin-left: -15%;
+    width: 1500px;
 }
 
 
@@ -38,4 +40,8 @@ body {
 .panel-body {
 	color: #2f2f33;
     font-weight: 500;
+}
+
+#kibana-dashboard{
+    border: None;
 }
