--- a/web/statisticsapp/templates/statistics.html
+++ b/web/statisticsapp/templates/statistics.html
@@ -11,7 +11,7 @@
                     <span>통계자료</span>
                 </div>
                 <div class="panel-body">
-
+                <iframe id="kibana-dashboard" src="http://203.246.112.137:5601/app/kibana#/dashboard/AWOWO1lU5JmCI5b7K-1M?embed=true&_g=(refreshInterval%3A(display%3AOff%2Cpause%3A!f%2Cvalue%3A0)%2Ctime%3A(from%3Anow-12h%2Cmode%3Aquick%2Cto%3Anow))" height="700px" width="100%"></iframe>
                 </div>
             </div>
         </div>
