리포트 폼 만드는 코드 리팩토링

--- a/web/analysisapp/templates/static_report.html
+++ b/web/analysisapp/templates/static_report.html
@@ -171,7 +171,7 @@
                     <span>유사한 파일</span>
                 </div>
                 <div class="panel-body">
-                    <h2> 검색된 유사한 파일이 존재하지 않습니다 </h2>
+                    <div> 검색된 유사한 파일이 존재하지 않습니다 </div>
                 </div>
             </div>
         </div>
