바이러스토탈 리포트 조회 기능 ㅊ ㅜ가

--- a/web/static/css/report.css
+++ b/web/static/css/report.css
@@ -285,3 +285,11 @@ li {
     margin-left: 10px;
     margin-bottom : 5px;
 }
+
+.VT-a{
+    color: black;
+}
+
+.VT-a:hover{
+    text-decoration: none;
+}
