--- a/web/analysisapp/templates/static_report.html
+++ b/web/analysisapp/templates/static_report.html
@@ -177,6 +177,11 @@
         </div>
     </div>
     {% endif %}
+    <div class="row">
+        <div class="row_detail_2">
+            <a href="https://www.virustotal.com/#/file/{{ report_form.fields.md5.initial }}" class="VT-a">VirusTotal report 보기</a>
+        </div>
+    </div>
 </div>
 
 
