바이러스토탈 리포트 연결 기능 버그 수정

--- a/web/analysisapp/templates/dynamic_report.html
+++ b/web/analysisapp/templates/dynamic_report.html
@@ -162,7 +162,7 @@
 
     <div class="row">
         <div class="row_detail_2">
-            <a href="https://www.virustotal.com/#/file/{{ report_form.fields.md5.initial }}" class="VT-a">VirusTotal report 보기</a>
+            <a href="https://www.virustotal.com/#/file/{{ basic_report_form.fields.md5.initial }}" class="VT-a">VirusTotal report 보기</a>
         </div>
     </div>
 </div>
