화면이 커졌을때 업로드화면 라벨 깨지는 현상 수정

--- a/web/analysisapp/templates/upload.html
+++ b/web/analysisapp/templates/upload.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %} {% block content %} {% load staticfiles %}
 <div class="row">
     <div class="box__logo">
-        <img src="{% static 'logo.png' %}" class="img__logo" align="absmiddle"> <span>악성코드 검사</span>
+        <img src="{% static 'logo.png' %}" class="img__logo" align="absmiddle"> <label>악성코드 검사</label>
     </div>
 </div>
 
