메인화면 구성 수정

--- a/web/mainapp/templates/home.html
+++ b/web/mainapp/templates/home.html
@@ -13,9 +13,9 @@
         </div>
                 
         <div class="p-lg-5 mx-auto my-5" id="main-text">
-        <h1 class="display-4">악성코드 전문가들을 위해</h1>
-        <p>본 프로젝트는 일반 사용자가 아닌, 악성코드 분석에 대한 전문 지식이 있는 악성코드 분석가들을 위한 프로젝트입니다. 일반 사용자들은 사용에 있어 어려움이 있을 수 있습니다.</p>
-      </div>
+        <h1 class="display-4">악성 코드 분석 전문가를 위한 분석 서비스</h1>
+        <p>MASK는 보안 전문가에게 인공지능과 빅데이타 기술을 적용하여 악성코드를 분석하고 결과를 제공해주는 오픈소스 소프트웨어 입니다.</p>
+        </div>
         
     </div>
 
@@ -24,18 +24,23 @@
     <div class="row" id="fadein-img" style="display: none">
         <div class="col-lg-2" >
             <img class="rounded-circle" src="{% static 'home-1.png' %}" width="180" height="180">
-            <h3>유사 파일 검사</h3>
-            <p>업로드한 파일과 유사한 파일들에 대한 검사 결과도 제공합니다</p>
+            <h3>오픈소스 프로젝트</h3>
+            <p>본 서비스는 오픈소스 소프트웨어로 제공합니다</p>
         </div>
         <div class="col-lg-2">
             <img class="rounded-circle" src="{% static 'home-2.png' %}" width="180" height="180">
-            <h3>자체 라벨링</h3>
-            <p>카스퍼스키를 활용한 자체적 라벨링을 제공합니다</p>
+            <h3>딥러닝 사용</h3>
+            <p>딥러닝을 이용하여 악성코드 탐지 서비스를 제공합니다</p>
         </div>
         <div class="col-lg-2">
             <img class="rounded-circle" src="{% static 'home-3.png' %}" width="180" height="180">
-            <h3>오픈소스 제공</h3>
-            <p>본 프로젝트는 부분 유료화 없이 오픈소스 소프트웨어로 제공합니다</p>
+            <h3>정적 동적분석</h3>
+            <p>본 서비스는 정적분석을 위해 IDA를 사용하며, 동적분석을 위해 Cuckoo Sandbox를 사용합니다.</p>
+        </div>
+        <div class="col-lg-2">
+            <img class="rounded-circle" src="{% static 'home-4.png' %}" width="180" height="180">
+            <h3>유사 파일 검사</h3>
+            <p>업로드한 파일과 유사한 파일들에 대한 검사 결과도 제공합니다</p>
         </div>
     </div>
 
