--- a/web/static/css/home.css
+++ b/web/static/css/home.css
@@ -41,6 +41,7 @@ h3 {
 }
 
 #jumbotron-id {
+    width:100%;
     height: 380px;
 }
 
@@ -55,7 +56,7 @@ h3 {
 
 
 #main-text {
-    margin: 6% 10% 6% 5%;
+    margin: 5% 10% 6% 10%;
     height: 100%;
 }
 
@@ -65,7 +66,7 @@ h3 {
 
 .col-lg-2 {
     display: inline-grid !important; 
-	margin: 0% 7% !important;
+	margin: 7% 0% 0% 12% !important;
     max-width: 210px !important;
 }
 
